<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

    <TextView
        android:id="@+id/item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item1"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
         android:layout_gravity="center"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="201dp" />
    <TextView
        android:id="@+id/item2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item2"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="201dp" />
    <TextView
        android:id="@+id/item3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item3"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="201dp" />
    <TextView
        android:id="@+id/item4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item4"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="201dp" />
    <TextView
        android:id="@+id/item5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item5"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="201dp" />
    <TextView
        android:id="@+id/item6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item6"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="201dp" />
    <TextView
        android:id="@+id/item7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item7"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="201dp" />
    <TextView
        android:id="@+id/item8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item8"
          android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="201dp" />
    <TextView
        android:id="@+id/item9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item9"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="201dp" />
    <TextView
        android:id="@+id/item10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item10"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="201dp" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:text="@string/button_add"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>

    </LinearLayout>



</LinearLayout>