<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="201dp" />

        <Button
            android:id="@+id/button_rice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:text="@string/button_rice"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_pasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:text="@string/button_pasta"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/button_sausage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:text="@string/button_sausage"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_tomatoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:text="@string/button_tomatoes"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:text="@string/button_chocolate"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>

    </LinearLayout>



</LinearLayout>